syntax = "proto3";
// //comment this for js
package protobufModel; // Replace with your actual Go package name
option go_package = "./protobufModel";
// //

message Cart {
  string id = 1;
  string userEmail = 2;
  uint32 totalBill = 3;
  string orderDate = 4;

  //chane name to pid
  repeated int32 pIds = 5;
}

