syntax = "proto3";
 //comment this for js
package protobufModel; // Replace with your actual Go package name
option go_package = "./protobufModel";
// 

message CartProduct {
    string Id = 1;
    string cId = 2;
    int32 pId = 3;
  }

