syntax = "proto3";
//comment this for js // for join do this for all files e.g ProducList & Product etc
package protobufModel; 
option go_package = "./protobufModel";
//
import "ProductList.proto";
import "CartList.proto";


message HistoryList {
   ProductList products = 1;
   CartList carts = 2;
}


